# sexpresso

./: .gitignore  CONTRIBUTORS.txt  Makefile  PKGBUILD.sh  README.md  README.org  compile_flags.txt  meson.build  package.sh  pkgbuilder.py  sexpresso.opensuse.spec.sh  sexpresso.pc
.github/workflows/: release.yml
doc/: Doxifile.in  index.md
include/: sexpresso.hh
pkgbuild/: PKGBUILD  build  craft.sh  header  package
src/: sexpresso.cc
tests/: tests_sexpresso.cc  tests_sexpresso_std.cc
